--- a/TODO
+++ b/TODO
@@ -1,13 +1,8 @@
 
- + Mixed Problems ( Equality constraints )
- + Serialization of Block matrices
  + Documentation
- = Proper frictional problem interface
  = SOQP interface
- = Linear Block solver ( Conjugate gradient )
+ = Mixed Problems ( Equality constraints )
  - Coloring Gauss Seidel
- - FClib bindings
- - Sparse <-> Block Sparse conversion
  - Dense block matrices
  - Coulomb law refinements
 
